manifests/k3s/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: k3s-server
spec:
  selector:
    app: k3s-server
  ports:
    - port: 6443
      targetPort: 6443
      protocol: TCP
