manifests/k3s/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k3s-api
spec:
  rules:
    - host: k3s.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: k3s-server
                port:
                  number: 6443
